\name{missMethylnews}
\title{missMethyl News}
\encoding{UTF-8}

\section{Version 1.20.3}{\itemize{

\item Added \code{fract.counts} logical parameter to enable fractional counting of CpGs 
to be turned off in gometh, gsameth, goregion and gsaregion. This switches off 
the adjustment for CpGs that map to multiple genes. This is primarily intended 
for comparison with earlier versions and we strongly encourage it to be set to 
TRUE.
}}

\section{Version 1.20.0}{\itemize{

\item Updated gsameth to take into account that some CpGs map to multiple genes. For a small number of gene families, this previously caused their associated GO categories/gene sets to be erroneously overrepresented and thus highly significant.    
\item Updated gometh to call gsameth to perform statistical testing for GO categories and KEGG pathways; goana and kegga are no longer used.
\item Replaced use of the AnnotationDbi 'toTable' function with 'select' to speed up execution.
\item The 'topGSA' function is now used to look at the top ranked results from both gometh and gsameth. The vignette has been modified accordingly. 
}}

\section{Version 1.15.2}{\itemize{

\item Updated getMappedEntrezIDs, gometh and gsameth to to speed up execution by taking the array annotation in as an optional argument.
\item missMethyl now uses the latest IlluminaHumanMethylationEPICanno.ilm10b2.hg19 annotation by default for EPIC arrays.
}}


\section{Version 1.15.1}{\itemize{

\item Added getAdjusted function for extracting RUVm adjusted data for visualisation purposes
\item Updated vignette to demonstrate use of getAdjusted function
\item Vignette now includes an example of how to handle cases with RUVm where number of samples is greater than number of Illumina negative controls

}}

\section{Version 1.7.3}{\itemize{

\item modified gene set testing functions gometh and gsameth to accommodate EPIC arrays

}}

\section{Version 1.5.1}{\itemize{
