@@ -32,13 +32,16 @@ gsameth <- function(sig.cpg, all.cpg=NULL, collection,
   
   # Check collection is a list with character vectors
   if(!is.list(collection))
-    collection <- list(collection=collection)
+      collection <- list(collection=collection)
   collection <- lapply(collection, as.character)
   # Make sure gene set collections don't have any NAs
   collection <- lapply(collection, function(x) x[!is.na(x)])
-  # Make sure only collections with geneids present in universe are included
-  inUniv <- lapply(collection, function(x) sum(eg.universe %in% x))
-  collection <- collection[inUniv!=0]
+  # Remove genes that are NOT in the universe from collections
+  collection <- lapply(collection, function(x) x[x %in% eg.universe])
+  # Remove collections with no genes left after universe filter
+  inUniv <- sapply(collection, function(x) length(x) > 0)
+  collection <- collection[inUniv]
+  
 
   # Estimate prior probabilities
   if(prior.prob){
